# hostinit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  connect.rs  logging.rs  main.rs  prelude.rs  remote.rs  system.rs
src/remote/: alias.rs  apt.rs  aws.rs  docker.rs  docker_stats.rs  export.rs  git.rs  keys.rs  mkdir.rs  mount.rs  node_exporter.rs  terraform.rs
src/system/: mkdir.rs
